[project]
name = "medical-image-analysis"
version = "0.1.0"
description = ""
authors = [
    {name = "HASSANE SKIKRI",email = "hassaneskikri@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # core ML framework
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "tensorflow>=2.13.0",
    "keras>=2.13.0",

    # Image processing
    "opencv-python>=4.8.0",
    "scikit-image>=0.21.0",
    "Pillow>=10.0.0",

    # Data handling
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",

    # Model utilities
    "scikit-learn>=1.3.0",
    "tqdm>=4.65.0",
    "albumentations>=1.3.0",

    # Visualization and interpretation
    "grad-cam>=1.4.0",
    "plotly>=5.15.0",

    # Web interface
    "streamlit>=1.25.0",
    "streamlit-option-menu>=0.3.6",

    # Utilities
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "pathlib2>=2.3.7",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"